- Updated html heading tags - Updated login page

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -6,16 +6,17 @@
 
   .title {
     font-size: 1.5rem;
+    line-height: 1.8rem;
   }
 }
 
 .main {
-  h2 {
+  h1 {
     font-size: 2rem;
     font-weight: 100;
   }
 
-  h3 {
+  h2 {
     font-size: 1.2rem;
   }
 }
