--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,3 +14,14 @@
     margin-top: 1.2rem;
   }
 }
+
+.main {
+  h2 {
+    font-size: 2rem;
+    font-weight: 100;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+}
