--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -11,18 +11,18 @@
 
     video {
       margin-bottom: 0;
-      height: 95%;
+      height: 93%;
       width: 100%;
     }
 
-    .video-controls {
-      position: relative;
+    .progress {
+      height: 100%;
     }
 
-    .video-progress {
+    .video-volume {
       height: 100%;
-      border: solid #cdcdcd 1px;
-      color: #4b8a7d;
+      width: 70px;
+      max-width: 80px;
     }
   }
 }
